Since we're using pan instead of hardcoded addresses for the node and tag; the tag now tries to range with the clock master by default.

--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -4,9 +4,12 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '1000000'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 1
+    CONSOLE_HISTORY_SIZE: 8
+
     DW1000_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
+    HARDFLOAT: 1
     TDMA_NSLOTS: 160
     RNG_VERBOSE: 0
     CCP_VERBOSE: 0
