Changed all occurances of DW1000_DEVICE_ID_ to DW_DEVICE_ID_

--- a/apps/depreciated/clock_master/syscfg.yml
+++ b/apps/depreciated/clock_master/syscfg.yml
@@ -10,7 +10,7 @@ syscfg.vals:
     DW1000_PAN: 0
     TDMA_ENABLED: 1
    
-    DW1000_DEVICE_ID_0: ((uint16_t){0x8000})
+    DW_DEVICE_ID_0: ((uint16_t){0x8000})
     
 syscfg.defs:
     DEVICE_UUID:
