--- a/apps/depreciated/twr_node_range/syscfg.yml
+++ b/apps/depreciated/twr_node_range/syscfg.yml
@@ -9,7 +9,7 @@ syscfg.vals:
     DW1000_CCP_ENABLED: 0
     DW1000_PAN: 0
     DW1000_RANGE: 1
-    DW1000_DEVICE_ID_0: ((uint16_t){0xDEC0})
+    DW_DEVICE_ID_0: ((uint16_t){0xDEC0})
 
 syscfg.defs:
     UUID_CCP_MASTER:
