--- a/apps/depreciated/twr_tag_nranges/syscfg.yml
+++ b/apps/depreciated/twr_tag_nranges/syscfg.yml
@@ -8,7 +8,7 @@ syscfg.vals:
     DW1000_DS_TWR_EXT_ENABLED: 0
     DW1000_CLOCK_CALIBRATION: 0
     DW1000_PAN: 0
-    DW1000_DEVICE_ID_0: ((uint16_t){0xAAAA})
+    DW_DEVICE_ID_0: ((uint16_t){0xAAAA})
 syscfg.defs:
     UUID_CCP_MASTER:
         description: >
