--- a/apps/depreciated/twr_tag_range/syscfg.yml
+++ b/apps/depreciated/twr_tag_range/syscfg.yml
@@ -10,7 +10,7 @@ syscfg.vals:
     DW1000_CLOCK_CALIBRATION: 1
     DW1000_RANGE: 1
     # OS_SYSVIEW: 1
-    DW1000_DEVICE_ID_0: ((uint16_t){0xDEC1})
+    DW_DEVICE_ID_0: ((uint16_t){0xDEC1})
 syscfg.defs:
     UUID_CCP_MASTER:
         description: >
