--- a/apps/loopback/syscfg.yml
+++ b/apps/loopback/syscfg.yml
@@ -30,8 +30,8 @@ syscfg.vals:
     DW1000_DEVICE_0_TX_ANT_DLY: 0x4053
     DW1000_DEVICE_0_RX_ANT_DLY: 0x4012
 
-    DW1000_DEVICE_ID_0: ((uint16_t){0x4321})
-    DW1000_DEVICE_ID_1: ((uint16_t){0x1234})
+    DW_DEVICE_ID_0: ((uint16_t){0x4321})
+    DW_DEVICE_ID_1: ((uint16_t){0x1234})
     
 syscfg.defs:
     UUID_CCP_MASTER:
