--- a/apps/twr_node_tdma_ota_ble/syscfg.yml
+++ b/apps/twr_node_tdma_ota_ble/syscfg.yml
@@ -7,7 +7,7 @@ syscfg.vals:
     DW1000_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
-    DW1000_DEVICE_ID_0: ((uint16_t){0x4321})
+    DW_DEVICE_ID_0: ((uint16_t){0x4321})
     CCP_VERBOSE: 0
     TDMA_NSLOTS: 160
     STATS_NAMES: 1
