tdma->parent to ->dev_inst. Changed callout to event where possible. Increased tag uart_baudrate to 1M

--- a/apps/rtdoa_tag/syscfg.yml
+++ b/apps/rtdoa_tag/syscfg.yml
@@ -10,7 +10,7 @@ syscfg.vals:
     # Route console to RTT
     CONSOLE_UART: 1
     CONSOLE_RTT: 0
-    CONSOLE_UART_BAUD: 115200
+    CONSOLE_UART_BAUD: 1000000
     CONSOLE_UART_TX_BUF_SIZE: 1024
     CONSOLE_UART_RX_BUF_SIZE: 256
     CONSOLE_ECHO: 1
