--- a/apps/loopback/syscfg.yml
+++ b/apps/loopback/syscfg.yml
@@ -7,18 +7,15 @@ syscfg.vals:
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
-    TDMA_NSLOTS: 16
     STATS_CLI: 1
     STATS_NAMES: 1
     DW1000_CLI: 1
-    WCS_VERBOSE: 1
+    WCS_VERBOSE: 0
     CIR_VERBOSE: 1    
-    CIR_SIZE: 16
-#    PMEM_VERBOSE: 1    
-#    PMEM_SIZE: 256
+    CIR_SIZE: 64
 
-    TWR_DS_TX_HOLDOFF: ((uint32_t){0x0500})
-    TWR_SS_TX_HOLDOFF: ((uint32_t){0x0500})
+    TWR_DS_TX_HOLDOFF: (0x0500UL)
+    TWR_SS_TX_HOLDOFF: (0x0500UL)
 
     # Enable newtmgr commands.
     STATS_NEWTMGR: 1
@@ -30,8 +27,8 @@ syscfg.vals:
     DW1000_DEVICE_0_TX_ANT_DLY: 0x4053
     DW1000_DEVICE_0_RX_ANT_DLY: 0x4012
 
-    DW_DEVICE_ID_0: ((uint16_t){0x4321})
-    DW_DEVICE_ID_1: ((uint16_t){0x1234})
+    DW_DEVICE_ID_0: (0x4321U)
+    DW_DEVICE_ID_1: (0x1234U)
     
 syscfg.defs:
     UUID_CCP_MASTER:
