--- a/apps/twr_nranges_tdma/pkg.yml
+++ b/apps/twr_nranges_tdma/pkg.yml
@@ -47,6 +47,8 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/nmgr_uwb"
     - "@mynewt-dw1000-core/mgmt/bcast_ota"
     - "@mynewt-dw1000-core/lib/panmaster"
+    - "@mynewt-dw1000-apps/lib/bleprph"
+
 
 pkg.cflags:
     - "-std=gnu99"
