--- a/apps/twr_nranges_tdma/pkg.yml
+++ b/apps/twr_nranges_tdma/pkg.yml
@@ -47,7 +47,7 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/nmgr_uwb"
     - "@mynewt-dw1000-core/mgmt/bcast_ota"
     - "@mynewt-dw1000-core/lib/panmaster"
-    - "@mynewt-dw1000-apps/lib/bleprph"
+#    - "@mynewt-dw1000-apps/lib/bleprph"
 
 
 pkg.cflags:
