Cleaned up syscfg.yml for node and tag examples. Made uwbcfg load config on tag.

--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -1,7 +1,7 @@
 syscfg.vals:
     # Route console to RTT
     CONSOLE_UART: 0
-    CONSOLE_UART_BAUD: '1000000'
+    CONSOLE_UART_BAUD: '115200'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 1
     CONSOLE_HISTORY_SIZE: 8
@@ -24,26 +24,3 @@ syscfg.vals:
     LOG_NEWTMGR: 1
     CONFIG_NEWTMGR: 1
     CONFIG_FCB: 1
-
-    ## Pan
-    PAN_ENABLED: 1
-    PAN_RX_TIMEOUT: ((uint16_t){4000})
-    PAN_LEASE_TIME: 600
-    PAN_LEASE_EXP_MARGIN: 30500
-
-    ## Panmaster
-    PANMASTER_FCB: 1
-    PANMASTER_FCB_FLASH_AREA: FLASH_AREA_NFFS
-    PANMASTER_NFFS: 0
-    PANMASTER_MAXNUM_NODES: 32
-    PANMASTER_DEFAULT_PANID: '"0xDECA"'
-    PANMASTER_CLI: 1
-
-syscfg.defs:
-    UUID_CCP_MASTER:
-        description: >
-            Clock Master UUID
-        value: ((uint64_t){0x8000})  
-    PANMASTER_ISSUER:
-        description: 'Act as panmaster in the network'
-        value: 1
