--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -1,7 +1,7 @@
 syscfg.vals:
     # Route console to RTT
     CONSOLE_UART: 0
-    CONSOLE_UART_BAUD: '115200'
+    CONSOLE_UART_BAUD: '115200' 
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 1
     CONSOLE_HISTORY_SIZE: 8
@@ -10,7 +10,9 @@ syscfg.vals:
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
+    FLOAT_USER: 1
     TDMA_NSLOTS: 160
+    RNG_VERBOSE: 2
     WCS_VERBOSE: 1
     STATS_NAMES: 1
     STATS_CLI: 1
