--- a/apps/loopback/syscfg.yml
+++ b/apps/loopback/syscfg.yml
@@ -8,10 +8,11 @@ syscfg.vals:
     DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
     STATS_CLI: 1
+    SHELL_TASK: 1
     STATS_NAMES: 1
     DW1000_CLI: 1
     WCS_VERBOSE: 0
-    CIR_VERBOSE: 1    
+    CIR_VERBOSE: 1     
     CIR_SIZE: 64
 
     TWR_DS_TX_HOLDOFF: (0x0500UL)
