Extended the loopback example to cover the four twr range profiles

--- a/apps/loopback/pkg.yml
+++ b/apps/loopback/pkg.yml
@@ -40,6 +40,7 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/wcs"
     - "@mynewt-timescale-lib/lib/timescale"
     - "@mynewt-dw1000-core/lib/twr_ss"
+    - "@mynewt-dw1000-core/lib/twr_ss_ext"
     - "@mynewt-dw1000-core/lib/twr_ds"
     - "@mynewt-dw1000-core/lib/twr_ds_ext"
     - "@mynewt-dw1000-core/lib/cir"
