--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -18,6 +18,7 @@ syscfg.vals:
     STATS_CLI: 1
     CONFIG_CLI: 1
     DW1000_CLI: 1
+    SHELL_TASK: 1
 
     # Enable newtmgr commands.
     STATS_NEWTMGR: 1
