--- a/repository.yml
+++ b/repository.yml
@@ -23,8 +23,9 @@ repo.versions:
     "1.0.0": "mynewt_dw1000_1_0_0_tag"
     "1.1.0": "mynewt_dw1000_1_1_0_tag"
     "1.2.0": "mynewt_dw1000_1_2_0_tag"
+    "1.3.0": "mynewt_dw1000_1_3_0_tag"
 
-    "0-latest": "1.0.0"
+    "0-latest": "1.3.0"
     "0-dev": "0.0.0"       # master
 
 repo.newt_compatibility:
@@ -39,6 +40,8 @@ repo.newt_compatibility:
         1.4.0: good
     1.2.0:
         1.5.0: good
+    1.3.0:
+        1.6.0: good
 
 repo.deps:
     apache-mynewt-core:
@@ -48,6 +51,7 @@ repo.deps:
         vers:
             master: 0-dev
             mynewt_dw1000_1_2_0_tag: 1.5.0
+            mynewt_dw1000_1_3_0_tag: 1.5.0
     mynewt-dw1000-core:
         type: github
         user: decawave
@@ -57,3 +61,4 @@ repo.deps:
             mynewt_dw1000_1_0_0_tag: 1.0.0
             mynewt_dw1000_1_1_0_tag: 1.1.0
             mynewt_dw1000_1_2_0_tag: 1.2.0
+            mynewt_dw1000_1_3_0_tag: 1.3.0
