Added bsp and build to newt syscfg.h generation

--- a/apps/twr_nranges_tdma/CMakeLists.txt
+++ b/apps/twr_nranges_tdma/CMakeLists.txt
@@ -12,7 +12,9 @@ if(NOT EXISTS "${PROJECT_BINARY_DIR}/../../../bin/targets/${PROJECT_NAME}/genera
     message(WARNING "Building newt dependencies")
     execute_process(COMMAND newt target create ${PROJECT_NAME})
     execute_process(COMMAND newt target set ${PROJECT_NAME} app=apps/twr_nranges_tdma)
+    execute_process(COMMAND newt target set ${PROJECT_NAME} bsp=@mynewt-dw1000-core/hw/bsp/dwm1001)
     execute_process(COMMAND newt target amend ${PROJECT_NAME} syscfg=NRANGES_ANCHOR=1)
+    execute_process(COMMAND newt build ${PROJECT_NAME})
 if(NOT EXISTS "${PROJECT_BINARY_DIR}/../../../bin/targets/${PROJECT_NAME}/generated/include/syscfg/syscfg.h")
     message( FATAL_ERROR "Building newt dependencies failed." )
 endif() 
