--- a/apps/ota_uwb_master/pkg.yml
+++ b/apps/ota_uwb_master/pkg.yml
@@ -49,8 +49,8 @@ pkg.deps:
     - "@apache-mynewt-nimble/nimble/host/util"
     - "@apache-mynewt-nimble/nimble/transport"
     - "@apache-mynewt-nimble/nimble/host"
-#dw1000 related
-    - "@mynewt-dw1000-core/hw/drivers/dw1000"
+#uwb related
+    - "@mynewt-dw1000-core/hw/drivers/uwb"
     - "@mynewt-dw1000-core/lib/twr_ds_ext"
     - "@mynewt-dw1000-core/lib/nmgr_cmds"
     - "@mynewt-dw1000-core/lib/nmgr_uwb"
