--- a/apps/twr_nranges_tdma/pkg.yml
+++ b/apps/twr_nranges_tdma/pkg.yml
@@ -23,7 +23,7 @@ pkg.description: "Basic reverse superres anchor/tag node"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
-  - dw1000
+  - uwb
 
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
@@ -34,7 +34,7 @@ pkg.deps:
     - "@apache-mynewt-core/encoding/json"
     - "@apache-mynewt-core/mgmt/imgmgr"
     - "@apache-mynewt-core/mgmt/newtmgr"
-    - "@mynewt-dw1000-core/hw/drivers/dw1000"
+    - "@mynewt-dw1000-core/hw/drivers/uwb"
     - "@mynewt-dw1000-core/lib/twr_ss_nrng"
     - "@mynewt-dw1000-core/sys/uwbcfg"   
     - "@mynewt-dw1000-core/lib/pan"
