--- a/apps/tag_mesh/pkg.yml
+++ b/apps/tag_mesh/pkg.yml
@@ -40,6 +40,7 @@ pkg.deps:
     - "@mynewt-dw1000-core/lib/twr_ss"
     - "@mynewt-dw1000-core/lib/twr_ds"
     - "@mynewt-dw1000-core/lib/twr_ds_ext"
+#    - "@mynewt-dw1000-core/sys/uwbcfg"   
     - "@apache-mynewt-nimble/nimble/controller"
     - "@apache-mynewt-nimble/nimble/host"
     - "@apache-mynewt-nimble/nimble/host/services/gap"
