--- a/apps/rtdoa_node/syscfg.yml
+++ b/apps/rtdoa_node/syscfg.yml
@@ -34,14 +34,14 @@ syscfg.vals:
     DW1000_PKG_INIT_LOG: 1
     DW1000_RXTX_LEDS: 0
     UWBCFG_APPLY_AT_INIT: 1
-    CCP_STATS: 1
+    UWB_CCP_STATS: 1
     TDMA_STATS: 1
     RNG_STATS: 0
     DW1000_MAC_STATS: 1
 
-    CCP_ENABLED: 1
-    CCP_PERIOD: ((uint32_t)0x100000)  # ~1Hz
-    CCP_MAX_CASCADE_RPTS: 8
+    UWB_CCP_ENABLED: 1
+    UWB_CCP_PERIOD: ((uint32_t)0x100000)  # ~1Hz
+    UWB_CCP_MAX_CASCADE_RPTS: 8
     TDMA_NSLOTS: 64
     TDMA_ENABLED: 1
     TDMA_SANITY_INTERVAL: 10
