--- a/apps/rtdoa_tag/syscfg.yml
+++ b/apps/rtdoa_tag/syscfg.yml
@@ -49,7 +49,7 @@ syscfg.vals:
     TDMA_SANITY_INTERVAL: 10
     TDMA_STATS: 1
     
-    WCS_ENABLED: 1
+    UWB_WCS_ENABLED: 1
     TIMESCALE_PROCESSING_ENABLED: 1
     ADAPTIVE_TIMESCALE_ENABLED: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
