--- a/apps/ota_uwb_master/syscfg.yml
+++ b/apps/ota_uwb_master/syscfg.yml
@@ -11,7 +11,7 @@ syscfg.vals:
     DW1000_BIAS_CORRECTION_ENABLED: 0
     TDMA_NSLOTS: 128
     DW_DEVICE_ID_0: 0x4321
-    CCP_VERBOSE: 0
+    UWB_CCP_VERBOSE: 0
     STATS_NAMES: 1
     STATS_CLI: 1
     CONFIG_CLI: 1
