--- a/apps/twr_aloha/pkg.yml
+++ b/apps/twr_aloha/pkg.yml
@@ -33,7 +33,7 @@ pkg.deps:
     - "@apache-mynewt-core/sys/stats/full"
     - "@apache-mynewt-core/encoding/json"
     - "@mynewt-dw1000-core/hw/drivers/uwb"
-# Use only one of the twr pkgs
+# Use only one of the twr pkgs (for tag at least, node can have all)
     - "@mynewt-dw1000-core/lib/twr_ss"
 #    - "@mynewt-dw1000-core/lib/twr_ss_ext"
 #    - "@mynewt-dw1000-core/lib/twr_ds"
