--- a/apps/twr_aloha/syscfg.yml
+++ b/apps/twr_aloha/syscfg.yml
@@ -15,7 +15,7 @@ syscfg.vals:
     FLOAT_USER: 1
     TDMA_NSLOTS: 160
     RNG_VERBOSE: 2
-    CCP_VERBOSE: 0
+    UWB_CCP_VERBOSE: 0
     STATS_NAMES: 1
     STATS_CLI: 1
     CONFIG_CLI: 1
