--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -14,7 +14,7 @@ syscfg.vals:
     TDMA_NSLOTS: 160
     RNG_VERBOSE: 2
     CIR_VERBOSE: 0
-    CCP_VERBOSE: 0
+    UWB_CCP_VERBOSE: 0
     STATS_NAMES: 1
     STATS_CLI: 1
     CONFIG_CLI: 1
