--- a/apps/twr_nranges_tdma/syscfg.yml
+++ b/apps/twr_nranges_tdma/syscfg.yml
@@ -81,13 +81,13 @@ syscfg.defs:
             Slot ID till which the nodes should respond
         value: 7
 
-    CCP_TOF_COMP_LOCATION_X:
+    UWB_CCP_TOF_COMP_LOCATION_X:
         description: 'x-location of this node in relation to the ccp master'
         value: ((float){2.0})
-    CCP_TOF_COMP_LOCATION_Y:
+    UWB_CCP_TOF_COMP_LOCATION_Y:
         description: 'y-location of this node in relation to the ccp master'
         value: ((float){0.0})
-    CCP_TOF_COMP_LOCATION_Z:
+    UWB_CCP_TOF_COMP_LOCATION_Z:
         description: 'z-location of this node in relation to the ccp master'
         value: ((float){0.0})
 
