DW1000_PKG_INIT_LOG -> UWB_PKG_INIT_LOG

--- a/apps/rtdoa_tag/syscfg.yml
+++ b/apps/rtdoa_tag/syscfg.yml
@@ -33,7 +33,7 @@ syscfg.vals:
 
     # UWB
     DW1000_DEV_TASK_STACK_SZ: 256
-    DW1000_PKG_INIT_LOG: 1
+    UWB_PKG_INIT_LOG: 1
     DW1000_RXTX_LEDS: 0
     UWBCFG_APPLY_AT_INIT: 1
     UWB_CCP_STATS: 1
