--- a/apps/lwip_ping_tx/syscfg.yml
+++ b/apps/lwip_ping_tx/syscfg.yml
@@ -3,6 +3,7 @@ syscfg.vals:
     CONSOLE_UART: 0
     CONSOLE_RTT: 1
     DW1000_DEVICE_0: 1
+    SPI_0_MASTER: 1
     DW_DEVICE_ID_0: 0x1234
 
 syscfg.defs:
