--- a/apps/rtdoa_node/syscfg.yml
+++ b/apps/rtdoa_node/syscfg.yml
@@ -58,10 +58,10 @@ syscfg.vals:
     UWBCFG_DEF_ROLE: '"0x4"'
 
     # Pan
-    PAN_ENABLED: 1
-    PAN_RX_TIMEOUT: ((uint16_t){4000})
-    PAN_LEASE_TIME: 1800
-    PAN_LEASE_EXP_MARGIN: 60500
+    UWB_PAN_ENABLED: 1
+    UWB_PAN_RX_TIMEOUT: ((uint16_t){4000})
+    UWB_PAN_LEASE_TIME: 1800
+    UWB_PAN_LEASE_EXP_MARGIN: 60500
 
     ## Panmaster    
     PANMASTER_FCB: 1
