--- a/apps/tag_mesh/syscfg.yml
+++ b/apps/tag_mesh/syscfg.yml
@@ -4,9 +4,10 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '1000000' 
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 1
-    DW1000_DEVICE_0: 1
+
+    # UWB
+    UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
-    DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
     TDMA_NSLOTS: 160
     WCS_VERBOSE: 1
