--- a/apps/listener/syscfg.yml
+++ b/apps/listener/syscfg.yml
@@ -40,11 +40,7 @@ syscfg.vals:
     STATS_CLI: 1
     
     # Enable DW1000
-    DW1000_DEVICE_0: 1
-    DW1000_DEVICE_1: 0
-    DW1000_SS_TWR_ENABLED: 0
-    DW1000_DS_TWR_ENABLED: 1
-    DW1000_DS_TWR_EXT_ENABLED: 0
+    UWB_DEVICE_0: 1
     UWBCFG_APPLY_AT_INIT: 1
     CIR_ENABLED: 0
     CIR_VERBOSE: 0
@@ -62,3 +58,5 @@ syscfg.vals:
     BLE_ROLE_OBSERVER: 0
     BLE_ROLE_PERIPHERAL: 1
     
+    MSYS_1_BLOCK_COUNT: 24
+    MSYS_1_BLOCK_SIZE: 512
