--- a/apps/ota_uwb_slave/syscfg.yml
+++ b/apps/ota_uwb_slave/syscfg.yml
@@ -4,7 +4,8 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '115200'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 0
-    DW1000_DEVICE_0: 1
+
+    UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
@@ -15,6 +16,7 @@ syscfg.vals:
     STATS_CLI: 1
     CONFIG_CLI: 1
     DW1000_CLI: 1
+    DW3000_CLI: 1
 
     # Log reboot messages to a flash circular buffer.
     REBOOT_LOG_FCB: 1
