--- a/apps/twr_aloha/syscfg.yml
+++ b/apps/twr_aloha/syscfg.yml
@@ -8,9 +8,8 @@ syscfg.vals:
 
     CONFIG_FCB: 1
     
-    DW1000_DEVICE_0: 1
+    UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
-    DW1000_BIAS_CORRECTION_ENABLED: 0
     HARDFLOAT: 1
     FLOAT_USER: 1
     RNG_VERBOSE: 2
@@ -27,10 +26,6 @@ syscfg.vals:
     CONFIG_NEWTMGR: 1
     
 syscfg.defs:
-    UUID_CCP_MASTER:
-        description: >
-            Clock Master UUID
-        value: ((uint64_t){0x8000})  
     ANCHOR_ADDRESS:
         description: 'Address of anchor'
         value: 0x1234
