--- a/apps/twr_nranges_tdma/syscfg.yml
+++ b/apps/twr_nranges_tdma/syscfg.yml
@@ -11,9 +11,8 @@ syscfg.vals:
     
     CONFIG_FCB: 1
     
-    DW1000_DEVICE_0: 1
+    UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
-    DW1000_BIAS_CORRECTION_ENABLED: 0
     TDMA_NSLOTS: 160
     NRNG_DEVICE_TYPE: 1
     HARDFLOAT: 1
@@ -22,6 +21,7 @@ syscfg.vals:
     STATS_CLI: 1
     CONFIG_CLI: 1
     DW1000_CLI: 1
+    DW3000_CLI: 1
     BCAST_OTA_CLI: 1
     IMGMGR_CLI: 1
     SHELL_TASK: 1
