--- a/apps/twr_aloha/pkg.yml
+++ b/apps/twr_aloha/pkg.yml
@@ -23,7 +23,7 @@ pkg.description: "Basic aloha-style ss-twr"
 pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
-  - dw1000
+  - uwb
 
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
