Fixed formatting and added cli for dw1000 and dw3000

--- a/apps/listener/syscfg.yml
+++ b/apps/listener/syscfg.yml
@@ -46,6 +46,8 @@ syscfg.vals:
     CIR_VERBOSE: 0
     CIR_OFFSET:  4
     CIR_SIZE:    8
+    DW1000_CLI:  1
+    DW3000_CLI:  1
 
     ## Where to store config 
     CONFIG_FCB: 1
