Including log api in prep for mynewt 1.6 support

--- a/apps/openThreadApp/pkg.yml
+++ b/apps/openThreadApp/pkg.yml
@@ -30,6 +30,7 @@ pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
     - "@apache-mynewt-core/sys/console/full" 
+    - "@apache-mynewt-core/sys/log/full"
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/hw/mcu/nordic"
     - "@apache-mynewt-core/crypto/mbedtls"
