--- a/apps/ota_uwb_master/syscfg.yml
+++ b/apps/ota_uwb_master/syscfg.yml
@@ -34,35 +34,11 @@ syscfg.vals:
     BLE_ROLE_PERIPHERAL: 1
     # OS main/default task
     OS_MAIN_STACK_SIZE: 640
-    SHELL_NEWTMGR: 0
+    SHELL_NEWTMGR: 1
 
-    # Lots of smaller mbufs are required for newtmgr using typical BLE ATT MTU
-    # values.
-    MSYS_1_BLOCK_COUNT: 22
-    MSYS_1_BLOCK_SIZE: 110
 syscfg.defs:
-    UUID_CCP_MASTER:
-        description: Clock Master UUID
-        value: ((uint64_t){0x8000})
-
-    BLEPRPH_LE_PHY_SUPPORT:
-        description: >
-            Enable support for changing PHY preference on active connection.
-            PHY preference change is triggered by configured GPIO pins.
-            Current PHY is indicated using LEDs connected to configured
-            GPIO pins.
-        value: 0
-    BLEPRPH_LE_PHY_BUTTON_GPIO:
-        description: >
-            GPIO pins for changing PHY preference on active connection. This
-            is an array of 4 GPIO pin numbers for 1M, 2M, LE Coded S=2 and
-            LE Coded S=8 respectively.
-        value: "(int[]){ BUTTON_1, BUTTON_2, BUTTON_3, BUTTON_4 }"
-    BLEPRPH_LE_PHY_LED_GPIO:
-        description: >
-            GPIO pins for indicating current PHY on active connection. This
-            is an array of 3 GPIO pin numbers for 1M, 2M and LE Coded
-            respectively.
-        value: "(int[]){ LED_1, LED_2, LED_3 }"
+    BLE_ENABLED:
+        description: 'Activate BLE'
+        value: 1
 
     
