--- a/apps/loopback/pkg.yml
+++ b/apps/loopback/pkg.yml
@@ -46,7 +46,7 @@ pkg.deps:
     - "@decawave-uwb-core/lib/cir"
     - "@decawave-uwb-core/sys/uwbcfg"  
     - "@apache-mynewt-core/boot/split"
-    - "@apache-mynewt-core/boot/bootutil"
+    - "@mcuboot/boot/bootutil"
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/mgmt/imgmgr"
     - "@apache-mynewt-core/mgmt/newtmgr"
@@ -55,7 +55,7 @@ pkg.deps:
     - "@apache-mynewt-core/sys/log/modlog"
  
 pkg.cflags:
-    - "-std=gnu99"
+    - "-std=gnu11"
     - "-fms-extensions"
     - "-DNRF52840_XXAA"
     
