--- a/apps/rtdoa_node/pkg.yml
+++ b/apps/rtdoa_node/pkg.yml
@@ -29,7 +29,7 @@ pkg.keywords:
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
-    - "@apache-mynewt-core/boot/bootutil"
+    - "@mcuboot/boot/bootutil"
     - "@apache-mynewt-core/sys/id"
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/sys/log/full"
@@ -55,7 +55,7 @@ pkg.deps:
     - "@decawave-uwb-apps/lib/bleprph"
 
 pkg.cflags:
-    - "-std=gnu99"
+    - "-std=gnu11"
     - "-fms-extensions"
 
 pkg.lflags:
