--- a/apps/twr_aloha/pkg.yml
+++ b/apps/twr_aloha/pkg.yml
@@ -40,7 +40,7 @@ pkg.deps:
 #    - "@decawave-uwb-core/lib/twr_ds_ext"
     - "@decawave-uwb-core/sys/uwbcfg"
     - "@apache-mynewt-core/boot/split"
-    - "@apache-mynewt-core/boot/bootutil"
+    - "@mcuboot/boot/bootutil"
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/mgmt/imgmgr"
     - "@apache-mynewt-core/mgmt/newtmgr"
@@ -48,7 +48,7 @@ pkg.deps:
     - "@apache-mynewt-core/sys/log/full"
 
 pkg.cflags:
-    - "-std=gnu99"
+    - "-std=gnu11"
     - "-fms-extensions"
     - "-Wno-strict-aliasing"
 
