--- a/apps/twr_node_tdma/pkg.yml
+++ b/apps/twr_node_tdma/pkg.yml
@@ -45,7 +45,7 @@ pkg.deps:
     - "@decawave-uwb-core/lib/twr_ds_ext"
     - "@decawave-uwb-core/sys/uwbcfg"   
     - "@apache-mynewt-core/boot/split"
-    - "@apache-mynewt-core/boot/bootutil"
+    - "@mcuboot/boot/bootutil"
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/mgmt/imgmgr"
     - "@apache-mynewt-core/mgmt/newtmgr"
@@ -53,7 +53,7 @@ pkg.deps:
     - "@apache-mynewt-core/sys/log/full"
 
 pkg.cflags:
-    - "-std=gnu99"
+    - "-std=gnu11"
     - "-fms-extensions"
     - "-Wno-strict-aliasing"
 
