--- a/apps/twr_tag_tdma/pkg.yml
+++ b/apps/twr_tag_tdma/pkg.yml
@@ -44,7 +44,7 @@ pkg.deps:
     - "@decawave-uwb-core/lib/cir"
     - "@decawave-uwb-core/sys/uwbcfg"   
     - "@apache-mynewt-core/boot/split"
-    - "@apache-mynewt-core/boot/bootutil"
+    - "@mcuboot/boot/bootutil"
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/mgmt/imgmgr"
     - "@apache-mynewt-core/mgmt/newtmgr"
@@ -52,7 +52,7 @@ pkg.deps:
     - "@apache-mynewt-core/sys/log/full"
     
 pkg.cflags:
-    - "-std=gnu99"
+    - "-std=gnu11"
     - "-fms-extensions"
     - "-Wno-strict-aliasing"
 
