Updated readme. Added mynewt_val to invert aoa in case antenna is mounted the other way on the aoa board

--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -26,3 +26,8 @@ syscfg.vals:
     LOG_NEWTMGR: 1
     CONFIG_NEWTMGR: 1
     CONFIG_FCB: 1
+
+syscfg.defs:
+    AOA_ANGLE_INVERT:
+        description: 'Set this to one if the aoa direction is inverted relative your board'
+        value: 0
