Added twr-ss-ack model to app-example

--- a/apps/twr_node_tdma/pkg.yml
+++ b/apps/twr_node_tdma/pkg.yml
@@ -40,6 +40,7 @@ pkg.deps:
     - "@mynewt-timescale-lib/lib/timescale"
     - "@decawave-uwb-core/lib/cir"
     - "@decawave-uwb-core/lib/twr_ss"
+    - "@decawave-uwb-core/lib/twr_ss_ack"
     - "@decawave-uwb-core/lib/twr_ss_ext"
     - "@decawave-uwb-core/lib/twr_ds"
     - "@decawave-uwb-core/lib/twr_ds_ext"
