--- a/apps/ota_uwb_master/syscfg.yml
+++ b/apps/ota_uwb_master/syscfg.yml
@@ -5,7 +5,7 @@ syscfg.vals:
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 0
     CONSOLE_HISTORY_SIZE: 8
-    
+
     UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
     TDMA_NSLOTS: 128
@@ -17,6 +17,7 @@ syscfg.vals:
     DW1000_CLI: 1
     DW3000_CLI: 1
     SHELL_TASK: 1
+    IMGMGR_CLI: 1
 
     # Enable newtmgr commands.
     STATS_NEWTMGR: 1
@@ -41,4 +42,3 @@ syscfg.defs:
         description: 'Activate BLE'
         value: 1
 
-    
