--- a/apps/ota_uwb_slave/syscfg.yml
+++ b/apps/ota_uwb_slave/syscfg.yml
@@ -4,6 +4,7 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '115200'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 0
+    CONSOLE_HISTORY_SIZE: 8
 
     UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
@@ -15,6 +16,7 @@ syscfg.vals:
     STATS_NAMES: 1
     STATS_CLI: 1
     CONFIG_CLI: 1
+    IMGMGR_CLI: 1
     DW1000_CLI: 1
     DW3000_CLI: 1
 
