Added support for BLE in twr_node/tag_tdma

--- a/apps/twr_tag_tdma/syscfg.yml
+++ b/apps/twr_tag_tdma/syscfg.yml
@@ -25,4 +25,16 @@ syscfg.vals:
     LOG_NEWTMGR: 1
     CONFIG_NEWTMGR: 1
     CONFIG_FCB: 1
-    
+
+syscfg.vals.BLE_ENABLED:
+    BLE_PREFIX: '"twr-tag"'
+  # BLE Disable central and observer roles.
+    BLE_ROLE_BROADCASTER: 1
+    BLE_ROLE_CENTRAL: 0
+    BLE_ROLE_OBSERVER: 0
+    BLE_ROLE_PERIPHERAL: 1
+
+syscfg.defs:
+    BLE_ENABLED:
+        description: 'Activate BLE'
+        value: 0
