--- a/apps/twr_node_tdma/pkg.yml
+++ b/apps/twr_node_tdma/pkg.yml
@@ -52,6 +52,9 @@ pkg.deps:
     - "@apache-mynewt-core/mgmt/newtmgr/transport/nmgr_shell"
     - "@apache-mynewt-core/sys/log/full"
 
+pkg.deps.BLE_ENABLED:
+    - "@decawave-uwb-apps/lib/bleprph"
+
 pkg.cflags:
     - "-std=gnu11"
     - "-fms-extensions"
