--- a/apps/twr_node_tdma/syscfg.yml
+++ b/apps/twr_node_tdma/syscfg.yml
@@ -27,7 +27,18 @@ syscfg.vals:
     CONFIG_NEWTMGR: 1
     CONFIG_FCB: 1
 
+syscfg.vals.BLE_ENABLED:
+    BLE_PREFIX: '"twr-node"'
+  # BLE Disable central and observer roles.
+    BLE_ROLE_BROADCASTER: 1
+    BLE_ROLE_CENTRAL: 0
+    BLE_ROLE_OBSERVER: 0
+    BLE_ROLE_PERIPHERAL: 1
+
 syscfg.defs:
+    BLE_ENABLED:
+        description: 'Activate BLE'
+        value: 0
     AOA_ANGLE_INVERT:
         description: 'Set this to one if the aoa direction is inverted relative your board'
         value: 0
