--- a/apps/twr_tag_tdma/pkg.yml
+++ b/apps/twr_tag_tdma/pkg.yml
@@ -28,7 +28,7 @@ pkg.keywords:
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
-    - "@apache-mynewt-core/sys/console/full" 
+    - "@apache-mynewt-core/sys/console/full"
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/sys/stats/full"
     - "@apache-mynewt-core/encoding/json"
@@ -42,7 +42,7 @@ pkg.deps:
     - "@decawave-uwb-core/lib/twr_ds"
     - "@decawave-uwb-core/lib/twr_ds_ext"
     - "@decawave-uwb-core/lib/cir"
-    - "@decawave-uwb-core/sys/uwbcfg"   
+    - "@decawave-uwb-core/sys/uwbcfg"
     - "@apache-mynewt-core/boot/split"
     - "@mcuboot/boot/bootutil"
     - "@apache-mynewt-core/kernel/os"
@@ -50,7 +50,10 @@ pkg.deps:
     - "@apache-mynewt-core/mgmt/newtmgr"
     - "@apache-mynewt-core/mgmt/newtmgr/transport/nmgr_shell"
     - "@apache-mynewt-core/sys/log/full"
-    
+
+pkg.deps.BLE_ENABLED:
+    - "@decawave-uwb-apps/lib/bleprph"
+
 pkg.cflags:
     - "-std=gnu11"
     - "-fms-extensions"
