--- a/apps/twr_aloha/pkg.yml
+++ b/apps/twr_aloha/pkg.yml
@@ -33,11 +33,11 @@ pkg.deps:
     - "@apache-mynewt-core/sys/stats/full"
     - "@apache-mynewt-core/encoding/json"
     - "@decawave-uwb-core/hw/drivers/uwb"
-# Use only one of the twr pkgs (for tag at least, node can have all)
     - "@decawave-uwb-core/lib/twr_ss"
-#    - "@decawave-uwb-core/lib/twr_ss_ext"
-#    - "@decawave-uwb-core/lib/twr_ds"
-#    - "@decawave-uwb-core/lib/twr_ds_ext"
+    - "@decawave-uwb-core/lib/twr_ss_ack"
+    - "@decawave-uwb-core/lib/twr_ss_ext"
+    - "@decawave-uwb-core/lib/twr_ds"
+    - "@decawave-uwb-core/lib/twr_ds_ext"
     - "@decawave-uwb-core/sys/uwbcfg"
     - "@apache-mynewt-core/boot/split"
     - "@mcuboot/boot/bootutil"
