--- a/apps/twr_aloha/syscfg.yml
+++ b/apps/twr_aloha/syscfg.yml
@@ -17,7 +17,7 @@ syscfg.vals:
     STATS_NAMES: 1
     STATS_CLI: 1
     CONFIG_CLI: 1
-    DW1000_CLI: 1
+    UWB_CLI: 1
     SHELL_TASK: 1
 
     # Enable newtmgr commands.
