--- a/apps/twr_aloha/syscfg.yml
+++ b/apps/twr_aloha/syscfg.yml
@@ -18,6 +18,7 @@ syscfg.vals:
     STATS_CLI: 1
     CONFIG_CLI: 1
     UWB_CLI: 1
+    UWB_CLI_BACKTRACE: 1
     SHELL_TASK: 1
 
     # Enable newtmgr commands.
