--- a/repository.yml
+++ b/repository.yml
@@ -21,8 +21,9 @@ repo.name: decawave-uwb-apps
 repo.versions:
     "0.0.0": "master"
     "0.0.1": "uwb_apps_0_0_1_tag"
+    "0.0.2": "uwb_apps_0_0_2_tag"
 
-    "0-latest": "0.0.1"
+    "0-latest": "0.0.2"
     "0-dev": "0.0.0"       # master
 
 repo.newt_compatibility:
@@ -31,6 +32,8 @@ repo.newt_compatibility:
     # present.
     0.0.0:
         0.0.0: good
+    0.0.2:
+        1.7.0: good
     0.0.1:
         1.7.0: good
 
@@ -42,6 +45,7 @@ repo.deps:
         vers:
             #master: 0-dev
             uwb_apps_0_0_1_tag: 1.7.0
+            uwb_apps_0_0_2_tag: 1.7.0
     decawave-uwb-core:
         type: github
         user: decawave
@@ -49,3 +53,4 @@ repo.deps:
         vers:
             master: 0-dev
             uwb_apps_0_0_1_tag: 0.0.1
+            uwb_apps_0_0_2_tag: 0.0.2
