--- a/repository.yml
+++ b/repository.yml
@@ -22,8 +22,9 @@ repo.versions:
     "0.0.0": "master"
     "0.0.1": "uwb_apps_0_0_1_tag"
     "0.0.2": "uwb_apps_0_0_2_tag"
+    "0.0.3": "uwb_apps_0_0_3_tag"
 
-    "0-latest": "0.0.2"
+    "0-latest": "0.0.3"
     "0-dev": "0.0.0"       # master
 
 repo.newt_compatibility:
@@ -32,6 +33,8 @@ repo.newt_compatibility:
     # present.
     0.0.0:
         0.0.0: good
+    0.0.3:
+        1.7.0: good
     0.0.2:
         1.7.0: good
     0.0.1:
@@ -46,6 +49,7 @@ repo.deps:
             #master: 0-dev
             uwb_apps_0_0_1_tag: 1.7.0
             uwb_apps_0_0_2_tag: 1.7.0
+            uwb_apps_0_0_3_tag: 1.7.0
     decawave-uwb-core:
         type: github
         user: decawave
@@ -54,3 +58,4 @@ repo.deps:
             master: 0-dev
             uwb_apps_0_0_1_tag: 0.0.1
             uwb_apps_0_0_2_tag: 0.0.2
+            uwb_apps_0_0_3_tag: 0.0.3
