--- a/apps/twr_nranges_tdma/pkg.yml
+++ b/apps/twr_nranges_tdma/pkg.yml
@@ -20,7 +20,7 @@
 pkg.name: apps/twr_nranges_tdma
 pkg.type: app
 pkg.description: "Basic nranges anchor/tag app"
-pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
+pkg.author: "UWB Core <uwbcore@gmail.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
   - uwb
