--- a/apps/desense/pkg.yml
+++ b/apps/desense/pkg.yml
@@ -6,7 +6,7 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
@@ -20,7 +20,7 @@
 pkg.name: apps/desense
 pkg.type: app
 pkg.description: "Desense RF test"
-pkg.author: "Niklas Casaril <niklas@lohmega.com>"
+pkg.author: "UWB Core <uwbcore@gmail.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
   - uwb
@@ -41,4 +41,3 @@ pkg.cflags:
     - "-std=gnu11"
     - "-fms-extensions"
     - "-Wno-strict-aliasing"
-
