--- a/apps/listener/pkg.yml
+++ b/apps/listener/pkg.yml
@@ -6,7 +6,7 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
@@ -20,7 +20,7 @@
 pkg.name: apps/listener
 pkg.type: app
 pkg.description: "UWB listener"
-pkg.author: "Niklas Casaril <niklas@casaril.com>"
+pkg.author: "UWB Core <uwbcore@gmail.com>"
 pkg.homepage: "http://loligoelectronics.com"
 pkg.keywords:
   - dw1000
@@ -28,7 +28,7 @@ pkg.keywords:
 pkg.deps:
     - "@apache-mynewt-core/kernel/os"
     - "@apache-mynewt-core/hw/hal"
-    - "@apache-mynewt-core/sys/console/full" 
+    - "@apache-mynewt-core/sys/console/full"
     - "@apache-mynewt-core/sys/shell"
     - "@apache-mynewt-core/sys/log/full"
     - "@apache-mynewt-core/sys/stats/full"
@@ -39,12 +39,10 @@ pkg.deps:
 
 pkg.deps.BLE_ENABLED:
     - "@decawave-uwb-apps/lib/bleprph"
-    
+
 pkg.deps.ETH_0:
     - "@apache-mynewt-core/net/ip/inet_def_service"
 
 pkg.cflags:
     - "-std=gnu11"
     - "-fms-extensions"
-
-    
