--- a/apps/ota_uwb_slave/pkg.yml
+++ b/apps/ota_uwb_slave/pkg.yml
@@ -6,7 +6,7 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
@@ -20,7 +20,7 @@
 pkg.name: apps/ota_uwb_slave
 pkg.type: app
 pkg.description: "Sample app to test ota over uwb"
-pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
+pkg.author: "UWB Core <uwbcore@gmail.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
   - dw1000
@@ -56,5 +56,3 @@ pkg.cflags:
 
 pkg.lflags:
     - "-lm"
-
-
