--- a/apps/twr_aloha/pkg.yml
+++ b/apps/twr_aloha/pkg.yml
@@ -6,7 +6,7 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
@@ -20,7 +20,7 @@
 pkg.name: apps/twr_aloha
 pkg.type: app
 pkg.description: "Basic aloha-style ss-twr"
-pkg.author: "Paul Kettle <paul.kettle@decawave.com>"
+pkg.author: "UWB Core <uwbcore@gmail.com>"
 pkg.homepage: "http://www.decawave.com/"
 pkg.keywords:
   - uwb
