--- a/repository.yml
+++ b/repository.yml
@@ -34,6 +34,8 @@ repo.newt_compatibility:
     # present.
     0.0.0:
         0.0.0: good
+    0.1.0:
+        1.7.0: good
     0.0.3:
         1.7.0: good
     0.0.2:
