--- a/apps/streaming/syscfg.yml
+++ b/apps/streaming/syscfg.yml
@@ -4,7 +4,8 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '460800'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 1
-    CONSOLE_HISTORY_SIZE: 8
+    CONSOLE_HISTORY: ram
+    CONSOLE_HISTORY_RAM_HISTORY_SIZE: 8
 
     UWB_DEVICE_0: 1
     FS_XTALT_AUTOTUNE_ENABLED: 0
