--- a/apps/tdoa_tag/syscfg.yml
+++ b/apps/tdoa_tag/syscfg.yml
@@ -14,7 +14,8 @@ syscfg.vals:
     CONSOLE_UART_BAUD: 115200
     CONSOLE_UART_TX_BUF_SIZE: 1024
     CONSOLE_UART_RX_BUF_SIZE: 256
-    CONSOLE_HISTORY_SIZE: 8
+    CONSOLE_HISTORY: ram
+    CONSOLE_HISTORY_RAM_HISTORY_SIZE: 8
     LOG_LEVEL: 2
 
     # Shell
