--- a/apps/listener/syscfg.yml
+++ b/apps/listener/syscfg.yml
@@ -27,7 +27,8 @@ syscfg.vals:
     CONSOLE_UART_BAUD: 1000000
     CONSOLE_UART_TX_BUF_SIZE: 1024
     CONSOLE_UART_RX_BUF_SIZE: 256
-    CONSOLE_HISTORY_SIZE: 8
+    CONSOLE_HISTORY: ram
+    CONSOLE_HISTORY_RAM_HISTORY_SIZE: 8
 
     # Shell
     SHELL_TASK: 1
