--- a/apps/twr_aloha/syscfg.yml
+++ b/apps/twr_aloha/syscfg.yml
@@ -4,7 +4,8 @@ syscfg.vals:
     CONSOLE_UART_BAUD: '115200'
     CONSOLE_UART_TX_BUF_SIZE: '1024'
     CONSOLE_RTT: 0
-    CONSOLE_HISTORY_SIZE: 8
+    CONSOLE_HISTORY: ram
+    CONSOLE_HISTORY_RAM_HISTORY_SIZE: 8
 
     CONFIG_FCB: 1
 
