--- a/repository.yml
+++ b/repository.yml
@@ -24,8 +24,9 @@ repo.versions:
     "0.0.2": "uwb_apps_0_0_2_tag"
     "0.0.3": "uwb_apps_0_0_3_tag"
     "0.1.0": "uwb_apps_0_1_0_tag"
+    "0.1.1": "uwb_apps_0_1_1_tag"
 
-    "0-latest": "0.1.0"
+    "0-latest": "0.1.1"
     "0-dev": "0.0.0"       # master
 
 repo.newt_compatibility:
@@ -34,6 +35,8 @@ repo.newt_compatibility:
     # present.
     0.0.0:
         0.0.0: good
+    0.1.1:
+        1.7.0: good
     0.1.0:
         1.7.0: good
     0.0.3:
@@ -54,6 +57,7 @@ repo.deps:
             uwb_apps_0_0_2_tag: 1.7.0
             uwb_apps_0_0_3_tag: 1.7.0
             uwb_apps_0_1_0_tag: 1.7.0
+            uwb_apps_0_1_1_tag: 1.7.0
     decawave-uwb-core:
         type: github
         user: decawave
@@ -64,3 +68,4 @@ repo.deps:
             uwb_apps_0_0_2_tag: 0.0.2
             uwb_apps_0_0_3_tag: 0.0.3
             uwb_apps_0_1_0_tag: 0.1.0
+            uwb_apps_0_1_1_tag: 0.1.1
